Name:                funflow
Version:             1.4.1
Synopsis:            Workflows with arrows
Description:
        An arrow with resumable computations and logging

License:             MIT
License-file:        LICENSE
Author:              Tom Nielsen, Nicholas Clarke, Andreas Herrmann
Maintainer:          nicholas.clarke@tweag.io
build-type:          Simple
Cabal-Version:       >= 1.10
homepage:            https://github.com/tweag/funflow
bug-reports:         https://github.com/tweag/funflow
category:            Control
Tested-With:         GHC == 7.8.4, GHC == 7.10.2, GHC == 7.10.3, GHC == 8.0.1

extra-source-files:
                   changelog.md

Library
   ghc-options:       -Wall -fno-warn-type-defaults
   hs-source-dirs:    src
   default-language:  Haskell2010

   Exposed-modules:
                     Control.Arrow.AppArrow
                   , Control.Arrow.Async
                   , Control.Arrow.Free
                   , Control.Funflow
                   , Control.Funflow.Cache.TH
                   , Control.Funflow.ContentHashable
                   , Control.Funflow.ContentStore
                   , Control.Funflow.Diagram
                   , Control.Funflow.External
                   , Control.Funflow.External.Docker
                   , Control.Funflow.External.Executor
                   , Control.Funflow.External.Coordinator
                   , Control.Funflow.External.Coordinator.Memory
                   , Control.Funflow.External.Coordinator.Redis
                   , Control.Funflow.External.Coordinator.SQLite
                   , Control.Funflow.Lock
                   , Control.Funflow.Orphans
                   , Control.Funflow.Steps
                   , Control.Funflow.Pretty
                   , Control.Funflow.Exec.Simple
   Other-modules:
                     Control.Funflow.Base
                   , Control.Funflow.Class
                   , Control.Funflow.ContentStore.Notify
   Build-depends:
                 Glob                              >= 0.10.0 && < 0.11
               , aeson                             >= 1.4.3 && < 1.5
               , async                             >= 2.2.1 && < 2.3
               , base                              >= 4.6 && < 5
               , bytestring                        >= 0.10.8 && < 0.11
               , clock                             >= 0.8 && < 0.9
               , constraints                       >= 0.10.1 && < 0.11
               , containers                        >= 0.6.0 && < 0.7
               , contravariant                     >= 1.5 && < 1.6
               , cryptonite                        >= 0.25 && < 0.26
               , data-default                      >= 0.7.1 && < 0.8
               , directory                         >= 1.3.3 && < 1.4
               , exceptions                        >= 0.10.1 && < 0.11
               , filepath                          >= 1.4.2 && < 1.5
               , ghc-prim                          >= 0.5.3 && < 0.6
               , hashable                          >= 1.2.7 && < 1.3
               , hedis                             >= 0.10.0 && < 0.10.11
               -- ^ HostName type alias got removed
               , hinotify                          >= 0.4 && < 0.5
               , hostname                          >= 1.0 && < 1.1
               , integer-gmp                       >= 1.0.2 && < 1.1
               , katip                             >= 0.7 && < 0.8
               -- ^ handleScribe signature got changed
               , lens                              >= 4.17.1 && < 4.18
               , lifted-async                      >= 0.10.0 && < 0.11
               , memory                            >= 0.14.18 && < 0.15
               , monad-control                     >= 1.0.2 && < 1.1
               , mtl                               >= 2.2.2 && < 2.3
               , optparse-applicative              >= 0.14.3 && < 0.15
               , path                              >= 0.6.1 && < 0.7
               , path                              > 0.6.0
               , path-io                           >= 1.4.2 && < 1.5
               , pretty                            >= 1.1.3 && < 1.2
               , process                           >= 1.6.5 && < 1.7
               , random                            >= 1.1 && < 1.2
               , safe-exceptions                   >= 0.1.7 && < 0.2
               , scientific                        >= 0.3.6 && < 0.4
               , sqlite-simple                     >= 0.4.16 && < 0.5
               , stm                               >= 2.5.0 && < 2.6
               , store                             >= 0.5.1 && < 0.6
               , template-haskell                  >= 2.14.0 && < 2.15
               , text                              >= 1.2.3 && < 1.3
               , time                              >= 1.8.0 && < 1.9
               , transformers                      >= 0.5.6 && < 0.6
               , unix                              >= 2.7.2 && < 2.8
               , unordered-containers              >= 0.2.10 && < 0.3
               , vector                            >= 0.12.0 && < 0.13
               , yaml                              >= 0.11.0 && < 0.12
   if os(linux)
     CPP-options: -DOS_Linux
     Other-modules: Control.Funflow.ContentStore.Notify.Linux
     Build-depends: hinotify             >= 0.3.9
   else
     if os(darwin) || os(freebsd)
       CPP-options: -DOS_BSD
       Other-modules: Control.Funflow.ContentStore.Notify.BSD
       Build-depends: kqueue

Executable ffexecutord
  default-language:  Haskell2010
  main-is: app/FFExecutorD.hs
  build-depends:       base >=4.6 && <5
                     , bytestring
                     , clock
                     , funflow
                     , hedis
                     , path
                     , text
                     , unix
                     , safe-exceptions
                     , optparse-applicative

Test-suite test-funflow
  type:       exitcode-stdio-1.0
  default-language:  Haskell2010

  main-is: TestFunflow.hs
  ghc-options:        -Wall -threaded
  build-depends:       base >=4.6 && <5
                     , funflow
                     , filepath
                     , hedis
                     , path
                     , path-io
                     , text
                     , safe-exceptions
                     , unix

Test-suite unit-tests
  type:               exitcode-stdio-1.0
  default-language:   Haskell2010
  hs-source-dirs:     test
  main-is:            Test.hs
  other-modules:      Funflow.ContentStore
                      Funflow.SQLiteCoordinator
                      Funflow.TestFlows
                      Control.Arrow.Async.Tests
  ghc-options:        -Wall -threaded
  build-depends:      base
                    , async
                    , containers
                    , data-default >= 0.7
                    , directory
                    , filepath
                    , funflow
                    , path
                    , path-io
                    , process
                    , random
                    , safe-exceptions
                    , tasty
                    , tasty-hunit
                    , temporary
                    , unix
